--- a/module-3/Trinh_Mod3_3.html
+++ b/module-3/Trinh_Mod3_3.html
@@ -9,8 +9,7 @@
 <body>
     <div id="container">
         <h1>Assignment 3.3 Build a Web Page Exercise - Part 3</h1>
-        <div id="side-side">
-            <div style= "width: 45%; float: left">
+            <div id = left>
                 <h3>Top 10 Favorite Books/Mangas</h3>
                 <ol>
                     <li>Shokugeki no Souma: Food Wars</li>
@@ -25,7 +24,7 @@
                     <li>The Art of being Alone</li>
                 </ol>
             </div>
-            <div style= "margin-left: 45%;">
+            <div id="right">
                 <h3>5 Things I've Learned Since the Course Started</h3>
                 <ul>
                     <li>Do Everything on Visual Studios, it makes everything so much easier</li>
@@ -41,6 +40,5 @@
             <a href="C:\Users\Matthew Tranh\csd-340\index.html">Landing Page </a>
         </div>
     </div>
-
 </body>
 </html>
