--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <li><a href= "module-1/Trinh_mod1_3.html">assignment 1.3</a></li>
             <li><a href ="module-2/Trinh_mod2_2.html">assignment 2.2</a></li>
             <li><a href ="module-3/Trinh_Mod3_3.html">assignemnt 3.3</a></li>
+            <li><a href ="C:\Users\Matthew Tranh\csd-340\module-4\Trinh_mod4_2.html">assignemnt 4.2</a></li>
+            <li><a href ="C:\Users\Matthew Tranh\csd-340\module-8\Trinh_Mod8_2.html">assignemnt 8.3</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
