--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href ="C:\Users\Matthew Tranh\csd-340\module-4\Trinh_mod4_2.html">assignemnt 4.2</a></li>
             <li><a href ="C:\Users\Matthew Tranh\csd-340\module-8\Trinh_Mod8_2.html">assignemnt 8.3</a></li>
             <li><a href ="C:\Users\Matthew Tranh\csd-340\module-11\Trinh_mod11_2.html">assignemnt 11.2</a></li>
+            <li><a href ="C:\Users\Matthew Tranh\csd-340\module-12\Trinh_Mod12_2.html">assignemnt 12.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
